--- a/templates/modern/css/resume.css
+++ b/templates/modern/css/resume.css
@@ -116,7 +116,7 @@ h3+ul {
         padding: 0;
         width: 100%;
         dt {
-            font-size: 100%;
+            font-size: 115%;
         }
         dd {
             margin: 0 0 1em;
